--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body header {
     width: 50%;
     text-align: center;
     margin-left: 250px;
+    margin-bottom: 5%;
 }
 
 form {
@@ -68,6 +69,7 @@ td {
     color: rgb(157, 152, 197);
     border: solid 1px rgb(46, 41, 41);
     border-radius: 20%;
+    padding: 5px;
 }
 
 td:hover {
@@ -80,6 +82,7 @@ th:hover {
 
 body {
     background-image: url("../img/pexels-lumn-316466.jpg");
+    opacity: 150%;
     background-repeat: no-repeat;
     width: 100%;
     background-position: center;
